--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                                     data-margin="-1" data-navs="true">
                                     <div class="roadmap roadmap-s2 roadmap-i1 roadmap-finished">
                                         <h6 class="roadmap-year-s2">DAY 1</h6>
-                                        <h5 class="title title-sm roadmap-date">9AM - 10AM</h5>
+                                        <h5 class="title title-sm roadmap-date">10AM - 11AM</h5>
                                         <h5 class="title title-sm roadmap-date">Registration</h5>
                                         <div class="roadmap-text">
                                             <p>This requires two factor authentication : college ID & invitation email.</p>
@@ -527,7 +527,7 @@
                                     </div>
                                     <div class="roadmap roadmap-s2 roadmap-i2 roadmap-running">
                                          <h6 class="roadmap-year-s2"></h6> 
-                                        <h5 class="title title-sm roadmap-date">10AM</h5>
+                                        <h5 class="title title-sm roadmap-date">11AM</h5>
                                         <h5 class="title title-sm roadmap-date">Inauguration Ceremony</h5>
                                         <div class="roadmap-text">
                                             <p>Opening speech, Mentor and Judges introduction, general instructions.</p>
@@ -536,23 +536,16 @@
                                  
                                     <div class="roadmap roadmap-s2 roadmap-i2 roadmap-running">
                                         <h6 class="roadmap-year-s2"></h6>
-                                        <h5 class="title title-sm roadmap-date">11AM</h5>
+                                        <h5 class="title title-sm roadmap-date">12AM</h5>
                                         <h5 class="title title-sm roadmap-date">Hack Begins</h5>
                                         <div class="roadmap-text">
                                             <p>First think about the problem. Then, write the code.
                                         </div>
                                     </div>
+ 
                                     <div class="roadmap roadmap-s2 roadmap-i2 roadmap-running">
                                         <h6 class="roadmap-year-s2"></h6>
-                                        <h5 class="title title-sm roadmap-date">2PM</h5>
-                                        <h5 class="title title-sm roadmap-date">Lunch</h5>
-                                        <div class="roadmap-text">
-                                            <p>Tag a Food Lover :P</p>
-                                        </div>
-                                    </div>
-                                    <div class="roadmap roadmap-s2 roadmap-i2 roadmap-running">
-                                        <h6 class="roadmap-year-s2"></h6>
-                                        <h5 class="title title-sm roadmap-date">6PM</h5>
+                                        <h5 class="title title-sm roadmap-date">4PM</h5>
                                         <h5 class="title title-sm roadmap-date">Evening Snacks</h5>
                                         <div class="roadmap-text">
                                             <p>Need a coffee break!</p>
@@ -560,7 +553,7 @@
                                     </div>
                                     <div class="roadmap roadmap-s2 roadmap-i2 roadmap-running">
                                         <h6 class="roadmap-year-s2"></h6>
-                                        <h5 class="title title-sm roadmap-date">8PM</h5>
+                                        <h5 class="title title-sm roadmap-date">5PM</h5>
                                         <h5 class="title title-sm roadmap-date">Mentor Session - Idea Validation</h5>
                                         <div class="roadmap-text">
                                             <p>How about having an adrenaline rush!</p>
@@ -568,10 +561,18 @@
                                     </div>
                                     <div class="roadmap roadmap-s2 roadmap-i2 roadmap-running">
                                         <h6 class="roadmap-year-s2"></h6>
-                                        <h5 class="title title-sm roadmap-date">10PM</h5>
+                                        <h5 class="title title-sm roadmap-date">9PM</h5>
                                         <h5 class="title title-sm roadmap-date">Dinner</h5>
                                         <div class="roadmap-text">
                                             <p>There is no "we" when it comes to food.</p>
+                                        </div>
+                                    </div>
+                                    <div class="roadmap roadmap-s2 roadmap-i2 roadmap-running">
+                                        <h6 class="roadmap-year-s2">DAY 1</h6>
+                                        <h5 class="title title-sm roadmap-date">11PM</h5>
+                                        <h5 class="title title-sm roadmap-date">1st Evaluation</h5>
+                                        <div class="roadmap-text">
+                                            <p></p>
                                         </div>
                                     </div>
                                     <div class="roadmap roadmap-s2 roadmap-i2 roadmap-running">
@@ -584,7 +585,7 @@
                                     </div>
                                     <div class="roadmap roadmap-s2 roadmap-i2 roadmap-running">
                                         <h6 class="roadmap-year-s2"></h6>
-                                        <h5 class="title title-sm roadmap-date">8:30AM</h5>
+                                        <h5 class="title title-sm roadmap-date">8AM</h5>
                                         <h5 class="title title-sm roadmap-date">Breakfast</h5>
                                         <div class="roadmap-text">
                                             <p>More food? I don't mind</p>
@@ -800,8 +801,23 @@
                                                                         </div>
                                                         </div>
 
+                                                        <div class="item animated" data-animate="fadeInUp" data-delay="0.7">
+                                                            <div class="team team-s2 team-even">
+                                                                <div class="team-photo team-photo-s2">
+                                                                    <img src="img/Jalaj_Khurana4.jpg" alt="">
+                                                                </div>
+                                                                <h5 class="team-name title title-md">Jalaj Khurana</h5>
+                                                                <!-- <span class="team-position">CEO &amp; Lead Blockchain</span>
+                                                                            <ul class="team-social team-social-s2">
+                                                                                <li><a href="#"><em class="fab fa-facebook-f"></em></a></li>
+                                                                                <li><a href="#"><em class="fab fa-linkedin-in"></em></a></li>
+                                                                                <li><a href="#"><em class="fab fa-twitter"></em></a></li>
+                                                                            </ul> -->
+                                                            </div>
+                                                        </div>
+
                                     <div class="item animated" data-animate="fadeInUp" data-delay="0.6">
-                                        <div class="team team-s2 team-even">
+                                        <div class="team team-s2 team-odd">
                                             <div class="team-photo team-photo-s2">
                                                 <img src="img/Shruti_Dhankar.jpg" alt="">
                 
@@ -816,20 +832,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="item animated" data-animate="fadeInUp" data-delay="0.7">
-                                            <div class="team team-s2 team-odd">
-                                                <div class="team-photo team-photo-s2">
-                                                    <img src="img/Jalaj_Khurana4.jpg" alt="">
-                                                </div>
-                                                <h5 class="team-name title title-md">Jalaj Khurana</h5>
-                                                <!-- <span class="team-position">CEO &amp; Lead Blockchain</span>
-                                                            <ul class="team-social team-social-s2">
-                                                                <li><a href="#"><em class="fab fa-facebook-f"></em></a></li>
-                                                                <li><a href="#"><em class="fab fa-linkedin-in"></em></a></li>
-                                                                <li><a href="#"><em class="fab fa-twitter"></em></a></li>
-                                                            </ul> -->
-                                            </div>
-                                        </div>
+ 
 
                                             <div class="item animated" data-animate="fadeInUp" data-delay="0.7">
                                                     <div class="team team-s2 team-even">
@@ -1120,7 +1123,7 @@
                                                             data-target="#acc-1-6">Can I register individually? <span class="accordion-icon"></span></h5>
                                                         <div id="acc-1-6" class="collapse" data-parent="#acc-1">
                                                             <div class="accordion-content">
-                                                                <p>No,Team is mandotary.</p>
+                                                                <p>No, Team is mandotary.</p>
                                                             </div>
                                                         </div>
                                                     </div>
