--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                         <div class="row justify-content-center text-center">
                             <div class="col-lg-6">
                                 <div class="section-head section-head-s2">
-                                    <h2 class="title title-xl animated" data-animate="fadeInUp" data-delay="0.1" title="Core Team">Mentors</h2>
+                                    <h2 class="title title-xl animated" data-animate="fadeInUp" data-delay="0.1" title="">Mentors</h2>
                                     <!-- <p class="animated" data-animate="fadeInUp" data-delay="0.2">With help from our teams, contributors and investors these are the milestones we are looking forward to achieve.</p> -->
                                 </div>
                             </div>
@@ -670,7 +670,7 @@
                                             <img  src="img/mentors/nishutosh.jpeg" alt="">
                                         </div>
                                         <h5 class="team-name title title-md">Nishutosh Sharma</h5>
-                                        <span class="team-position">Full Stack Developer at Spinny</span>
+                                        <span class="team-position">Backend Developer at Spinny Former Head B.O.S.C.</span>
                                         <!-- <ul class="team-social team-social-s2">
                                             <li><a href="#"><em class="fab fa-facebook-f"></em></a></li>
                                             <li><a href="#"><em class="fab fa-linkedin-in"></em></a></li>
