--- a/index.html
+++ b/index.html
@@ -1051,6 +1051,10 @@
                             <div class="col-md-4 center"> <a target="_blank" href="https://www.scriptindia.org"><img width="150px" src="img/sponsors/script.png" alt=""></a><br></div><br><br><br><br>
                         <div class="col-md-4 center"><a target="_blank" href="https://rosenfeldmedia.com/"><img  width="300px" src="img/sponsors/Rosenfeld.png" alt="" class="mr-3"></a></div><br><br><br><br>
                     </div>
+                    <div class="row">
+                        <div class="col-md-6 center"><a target="_blank" href="http://zenicapharma.com/"><img width="300px" src="img/sponsors/zenciablack.png" alt=""></a></div><br><br><br><br>
+                        <div class="col-md-6 center"> <a target="_blank" href="https://cloudsploit.com/"><img width="300px" src="img/sponsors/cloud_sploit.png" alt=""></a><br></div><br><br><br><br>
+                </div>
 
                        
                            
