--- a/index.html
+++ b/index.html
@@ -1719,7 +1719,7 @@
        
 
 
-    
+<!--     
     <div class="nk-ovm nk-ovm-repeat nk-ovm-fixed shape-i">
             <div class="ovm-line"></div>
         </div>
@@ -1727,7 +1727,7 @@
 
     <div class="preloader no-default">
         <div class="text-zoom">
-            <!-- <div class="text-item"><div class="text-small"></div><div class="text-large"></div></div> -->
+            <div class="text-item"><div class="text-small"></div><div class="text-large"></div></div> 
             <div class="text-item">
                 <div class="text-small">h</div>
                 <div class="text-large">h</div>
@@ -1762,7 +1762,7 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
 
     <!-- JavaScript -->
     <script
