--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
-    <meta name="author" content="HackInit">
+    <meta name="author" content="Hackinit">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="hackathon hackinit 24 hour event BPIT">
     <!-- Fav Icon  -->
     <link rel="shortcut icon" href="img/Dark_logo.png">
     <!-- Site Title  -->
@@ -810,6 +810,23 @@
                     <div class="container container-xxl">
                         <div class="nk-block">
                             <div class="has-carousel carousel-nav-center" data-items="4" data-navs="true">
+
+                                    <div class="item animated" data-animate="fadeInUp" data-delay="0.3">
+                                            <div class="team team-s2 team-even">
+                                                <div class="team-photo team-photo-s2">
+                                                    <img  style="height:220px"src="img/judges/Deepali_mam.jpg" alt="">
+                    
+                                                </div>
+                                                <h5 class="team-name title title-md">Dr. Deepali Virmani</h5>
+                                                <span class="team-position">Head Computer Science & Engineering Department</span>
+                                                        <!-- <ul class="team-social team-social-s2">
+                                                            <li><a href="#"><em class="fab fa-facebook-f"></em></a></li>
+                                                            <li><a href="#"><em class="fab fa-linkedin-in"></em></a></li>
+                                                            <li><a href="#"><em class="fab fa-twitter"></em></a></li>
+                                                        </ul>  -->
+                                            </div>
+                                        </div>
+
                                     <div class="item animated" data-animate="fadeInUp" data-delay="0.5">
                                             <div class="team team-s2 team-even">
                                                 <div class="team-photo team-photo-s2">
@@ -844,11 +861,11 @@
                                 <div class="item animated" data-animate="fadeInUp" data-delay="0.3">
                                     <div class="team team-s2 team-even">
                                         <div class="team-photo team-photo-s2">
-                                            <img  style="height:230px"src="img/judges/Deepali_mam.jpg" alt="">
+                                            <img  style="height:230px"src="img/judges/shantanu.jpg" alt="">
             
                                         </div>
-                                        <h5 class="team-name title title-md">Dr. Deepali Virmani</h5>
-                                        <span class="team-position">Head Computer Science & Engineering Department</span>
+                                        <h5 class="team-name title title-md">Mr Shantanu Shukla</h5>
+                                        <span class="team-position">Founder of Live Smart Solutions</span>
                                                 <!-- <ul class="team-social team-social-s2">
                                                     <li><a href="#"><em class="fab fa-facebook-f"></em></a></li>
                                                     <li><a href="#"><em class="fab fa-linkedin-in"></em></a></li>
