--- a/index.html
+++ b/index.html
@@ -1411,7 +1411,7 @@
                                                         <div id="acc-1-9" class="collapse" data-parent="#acc-1">
                                                             <div class="accordion-content">
                                                                 <p>You are required to bring your school/college ID, laptops, phone,
-                                                                    chargers.</p>
+                                                                    chargers and extension board.</p>
                                                             </div>
                                                         </div>
                                                     </div>
